compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_module_suggest_import.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  utils.helpful()\n}\n"
---
error: Unknown module
  ┌─ /src/one/two.gleam:3:3
  │
3 │   utils.helpful()
  │   ^^^^^

No module has been found with the name `utils`.
Hint: Did you mean to import `utils`?
